fix: remove rubber band on ios

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
   font-family: monospace;
   
   font-size: 20px;
+  
+  /**
+   * Disables rubber band effect on ios
+   */
+  position: fixed;
+  width: 100%;
 }
 
 body {
